--- a/Task_Management_System_Db_Docker/db_build/Dockerfile
+++ b/Task_Management_System_Db_Docker/db_build/Dockerfile
@@ -2,4 +2,5 @@ FROM postgres:latest
 ENV POSTGRES_DB: task_manager_db
 ENV POSTGRES_USER: postgres
 ENV POSTGRES_PASSWORD: 08080808
-COPY ./creating_tables.sql /docker-entrypoint-initdb.d
+COPY ../src/main/resources/db-scripts/creating_tables.sql /docker-entrypoint-initdb.d
+#CMD ["echo", "Hello DB"]
