--- a/Task_Management_System_Db_Docker/src/main/resources/application.properties
+++ b/Task_Management_System_Db_Docker/src/main/resources/application.properties
@@ -1,1 +1,13 @@
-spring.application.name=HW7_Task_Management_System_DB
+spring.application.name=Task_Management_System_Db_Docker
+# Database connection settings
+spring.datasource.url=${URL}
+spring.datasource.username=${POSTGRES_USER}
+spring.datasource.password=${POSTGRES_PASSWORD}
+#spring.jpa.properties.hibernate.default_schema=${PG_SCHEMA:public}
+
+#spring.datasource.url=${URL:jdbc:postgresql://localhost:5432/task_manager_db}
+#spring.datasource.url=jdbc:postgresql://db:5432/task_manager_db
+#spring.datasource.url=jdbc:postgresql://localhost:5432/task_manager_db
+
+#docker-compose down
+#docker-compose up
