--- a/HW8_Task_Management_System_Db_Docker/pom.xml
+++ b/HW8_Task_Management_System_Db_Docker/pom.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
@@ -9,7 +11,7 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.hillel</groupId>
-    <artifactId>Task_Management_System_Db_Docker</artifactId>
+    <artifactId>HW8_Task_Management_System_Db_Docker</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>Task_Management_System_Db_Docker</name>
     <description>Task_Management_System_Db_Docker</description>
