Add HW9 and Jpa methods

--- a/HW9_Task_Management_System_Db_Docker_Jpa/src/main/resources/application.properties
+++ b/HW9_Task_Management_System_Db_Docker_Jpa/src/main/resources/application.properties
@@ -3,6 +3,6 @@ spring.application.name=HW9_Task_Management_System_Db_Docker_Jpa
 spring.datasource.url=${URL}
 spring.datasource.username=${POSTGRES_USER}
 spring.datasource.password=${POSTGRES_PASSWORD}
-#application.component=jdbc
+application.component=jpa
 #application component value: jdbc
 #application component value: jpa
