Correct gaps HW9

--- a/HW9_Task_Management_System_Db_Docker_Jpa/pom.xml
+++ b/HW9_Task_Management_System_Db_Docker_Jpa/pom.xml
@@ -10,6 +10,7 @@
         <version>3.2.5</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
+
     <groupId>com.hillel</groupId>
     <artifactId>HW9_Task_Management_System_Db_Docker_Jpa</artifactId>
     <version>0.0.1-SNAPSHOT</version>
@@ -53,10 +54,21 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
 
+<!--        <dependency>-->
+<!--            <groupId>org.hibernate</groupId>-->
+<!--            <artifactId>hibernate-core</artifactId>-->
+<!--            <version>6.3.1.Final</version>-->
+<!--            <type>pom</type>-->
+<!--        </dependency>-->
+
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-autoconfigure</artifactId>
         </dependency>
 
     </dependencies>
